Fixed logical text alignment on table cell

--- a/system.css
+++ b/system.css
@@ -507,7 +507,7 @@
 	td,
 	th {
 		border: var(--system-stroke-thin) solid var(--system-gray-stroke);
-		text-align: left;
+		text-align: start;
 		padding: var(--system-spacing-button);
 	}
 
